@@ -140,6 +140,15 @@ Rcpp::NumericVector zrexp(int n) {
 }
 
 // [[Rcpp::export]]
+Rcpp::NumericVector zruni(int n) {
+    Rcpp::NumericVector x(n);
+    for (int i=0; i<n; i++) {
+        x[i] = zigg.runi();
+    }
+    return x;
+}
+
+// [[Rcpp::export]]
 Rcpp::NumericVector zrnormVec(Rcpp::NumericVector x) {
     int n = x.size();
     for (int i=0; i<n; i++) {
